--- a/index.html
+++ b/index.html
@@ -279,10 +279,80 @@
                 a: "ロンバルディア・ヴェネツィア",
                 explanation: "北イタリアの地域"
             },
-            { 
+                 { 
                 q: "ウィーン会議で認められた、オーストリアを議長に、35君主国と４自由市から構成されたドイツ地域の国家連合名は何か？", 
                 a: "ドイツ連邦",
                 explanation: "35君主国と４自由市"
+                 },
+                  { 
+                q: "ウィーン議定書でプロイセンが獲得した、ライン中流域の地域名は何か？", 
+                a: "ラインラント",
+                explanation: "工業地帯がある"
+            },
+            { 
+                q: "旧ワルシャワ大公国地域に形成され、ロシア皇帝が国王を兼ね、事実上ロシア領となった王国はどこ？", 
+                a: "ポーランド王国",
+                explanation: "旧ワルシャワ大公国地域"
+            },
+            { 
+                q: "ウィーン議定書でロシアがスウェーデンから獲得した地域はどこ？", 
+                a: "フィンランド",
+                explanation: "ロシアがスウェーデンから獲得"
+            },
+            { 
+                q: "1812年にロシアがオスマン帝国から獲得し、ウィーン議定書で領有が確認された地域はどこか？", 
+                a: "ベッサラビア",
+                explanation: "ロシアがオスマン帝国から獲得"
+            },
+            { 
+                q: "ウィーン議定書で永世中立国として承認された国はどこか？", 
+                a: "スイス",
+                explanation: "永世中立国"
+            },
+            { 
+                q: "ウィーン会議によって成立した、19世紀前半のヨーロッパの国際的反動体制を何と呼ぶか？", 
+                a: "ウィーン体制",
+                explanation: "ヨーロッパの国際的反動体制"
+            },
+            { 
+                q: "キリスト教的友愛精神に基づく君主間の精神的盟約は何か？", 
+                a: "神聖同盟",
+                explanation: "ウィーン体制を補強するために成立"
+            },
+            { 
+                q: "神聖同盟の結成を提唱したロシア皇帝は誰か？", 
+                a: "アレクサンドル１世",
+                explanation: "神聖同盟の結成を提唱"
+            },
+            { 
+                q: "1815年11月、イギリス・ロシア・オーストリア・プロイセンのあいだに成立した軍事的・政治的同盟は何か？", 
+                a: "四国同盟",
+                explanation: "イギリス・ロシア・オーストリア・プロイセンの軍事的・政治的同盟"
+            },
+            { 
+                q: "国際政治において力を振るう強国の協議によって、勢力均衡と平和を維持するしくみを何と呼ぶか？", 
+                a: "列強体制",
+                explanation: "強国の協議により平和を維持"
+            },
+            { 
+                q: "現行の政治・社会体制を維持するために、これに対する批判や改革を否定する考え方や運動は何か？", 
+                a: "保守主義",
+                explanation: "現行に批判や改革を否定する考え方、運動"
+            },
+         　　{ 
+                q: "1815年、ドイツの自由と統一を求めて結成された、大学生の組合（ドイツ学生同盟）は何と呼ばれるか？", 
+                a: "ブルシェンシャフト",
+                explanation: "ドイツの自由と統一を求めた大学生の組合"
+            },
+            { 
+                q: "19世紀初め、イタリアの独立・統一や自由主義改革を目的に、南イタリアで結成された秘密結社は何か？", 
+                a: "カルボナリ",
+                explanation: "イタリアの独立・統一や自由主義改革を目的に"
+            },
+            { 
+                q: "1812年のカディス憲法を復活させたが、1823年にフランス軍の干渉で立憲革命が挫折した国はどこか？", 
+                a: "スペイン",
+                explanation: "1812年フランス軍の干渉で立憲革命が挫折した国"   
             }
         ];
 
