--- a/index.html
+++ b/index.html
@@ -353,7 +353,156 @@
                 q: "1812年のカディス憲法を復活させたが、1823年にフランス軍の干渉で立憲革命が挫折した国はどこか？", 
                 a: "スペイン",
                 explanation: "1812年フランス軍の干渉で立憲革命が挫折した国"   
-            }
+            },
+           { 
+                q: "1825年、十二月党員のロシアの青年貴族士官が、自由主義的改革を要求しておこした反乱は何か？", 
+                a: "デカブリスとの乱",
+                explanation: "ロシアの青年貴族士官が自由主義的改革を要求しておこした"
+            },
+                 { 
+                q: "1821〜29年、バルカン地域でオスマン帝国からの独立を求めて戦われた戦争は何か？", 
+                a: "ギリシア独立戦争",
+                explanation: "オスマン帝国からの独立を求めた戦争"
+            },
+                 { 
+                q: "1829年、ギリシア独立を支援したロシアと、オスマン帝国とのあいだで結ばれた講和条約は何か？", 
+                a: "アドリアノーブル条約",
+                explanation: "ギリシア独立を支援したロシアとオスマン帝国との間で結ばれた"
+            },
+                 { 
+                q: "1830年に開かれ、イギリス・フランスなどがギリシアの独立を承認した会議は何か？", 
+                a: "ロンドン会議",
+                explanation: "イギリス・フランスなどがギリシアの独立を承認した会議"
+            },
+                 { 
+                q: "ルイ１８世の弟で、1824年に即位し、亡命貴族に賠償金を与えるなど、反動政治を推し進めた国王は誰か？", 
+                a: "シャルル10世",
+                explanation: "1824年即位、反動政治を推進"
+            },
+                 { 
+                q: "1830年5〜7月、国民の不満を外に逸らすため、シャルル10世が出兵を強行した北アフリカの地域はどこか？", 
+                a: "アルジェリア",
+                explanation: "国民の不満を外に逸らすため出兵を強行"
+            },
+                 { 
+                q: "1830年7月、パリ市民が蜂起して復古王政を打倒した出来事は何か？", 
+                a: "七月革命",
+                explanation: "王政復古を打倒"
+            },
+                 { 
+                q: "七月革命のあと、自由主義的貴族として推され、国王に即位した人物（公爵）は誰か？", 
+                a: "ルイ＝フィリップ",
+                explanation: "自由主義的貴族から国王に即位"
+            },
+                 { 
+                q: "七月革命で独立した、制限選挙に基づく立憲君主政を何と呼ぶか？", 
+                a: "七月王政",
+                explanation: "制限選挙に基づく立憲君主政"
+            },
+                 { 
+                q: "ルイ14世の弟が祖である、ルイ＝フィリップの家系は何か？", 
+                a: "オルレリアン家",
+                explanation: "ルイ＝フィリップの家系"
+            },
+                 { 
+                q: "七月革命を題材として描いたドラクロワの作品名は何か？", 
+                a: "民衆を導く自由の女神",
+                explanation: "七月革命を描いた作品"
+            },
+                 { 
+                q: "七月革命の影響下、1830年にオランダから独立を宣言し、翌年に立憲王政が成立した国はどこか？", 
+                a: "ベルギー",
+                explanation: "オランダから独立し、立憲王政が成立した国"
+            },
+                 { 
+                q: "七月革命の影響下、ロシアによる支配からの離脱を求めて蜂起したが、鎮圧されて失敗に終わった国はどこか？", 
+                a: "ポーランド",
+                explanation: "ロシア支配からの離脱を求めて蜂起するも失敗"
+            },{ 
+                q: "1818年からプロイセンを中心に結成され、1834年には３つの組織を結合して発足した同盟は何か？", 
+                a: "ドイツ関税同盟",
+                explanation: "プロイセンを中心に結成された同盟"
+            },{ 
+                q: "個人の自由な活動を重視し、参政権の拡大や経済活動の自由などを目指す思想は何か？", 
+                a: "自由主義",
+                explanation: "参政権の拡大や経済活動の自由を目指す思想"
+            },
+                 { 
+                q: "1824年に廃止されたことで、イギリスでの労働組合の結成の公認が実現した法律は何か？", 
+                a: "団結禁止法",
+                explanation: "1824年に廃止、労働組合の結成の公認が実現"
+            },
+                 { 
+                q: "1828年に廃止されたことで、プロテスタント非国教徒の公職就任が保証されることになった法律は何か？", 
+                a: "審査法",
+                explanation: "プロテスタント非国教徒の公職就任が保障されることになった法律"
+            },
+                 { 
+                q: "1829年に成立した、カトリック教徒の公職就任を可能にしてイギリスでの宗教的差別を撤廃した法律は何か？", 
+                a: "カトリック教徒解放法",
+                explanation: "イギリスでの宗教的差別を撤廃"
+            },
+                 { 
+                q: "カトリック教徒解放法の制定に尽力したアイルランド人は誰か？", 
+                a: "オコネル",
+                explanation: "オコンネルでも可"
+            },
+                 { 
+                q: "1807年、植民地地主が猛反対するなか、ウィルバーフォースらの努力によってイギリスで実現された法令の内容は何か？", 
+                a: "奴隷貿易の禁止",
+                explanation: "植民地地主は猛反対"
+            },
+                 { 
+                q: "1832年にホイッグ内閣のもとで実施され、産業資本家の参政権獲得が実現した自由主義的改革は何か？", 
+                a: "第１回選挙法改正",
+                explanation: "ホイッグ内閣で実施、自由主義的改革"
+            },
+                 { 
+                q: "第１回選挙法改正で廃止された人口の都市集中で有権者が激減したにもかかわらず、地域有力者の支配下に置かれたままの選挙区を何と呼ぶか？", 
+                a: "腐敗選挙区",
+                explanation: "地域有力者の支配下に置かれたままの選挙区"
+            },
+                 { 
+                q: "第１回選挙法改正ののち、1837年頃より都市労働者が開始した、選挙権獲得運動を何と呼ぶか？", 
+                a: "チャーティスト運動",
+                explanation: "都市労働者が始めた選挙権獲得運動"
+            },
+                 { 
+                q: "チャーティスト運動で、都市労働者たちが掲げた６ヵ条からなる請願書を何と呼ぶか？", 
+                a: "人民憲章",
+                explanation: "都市労働者たちが掲げた６ヵ条の請願書"
+            },
+                 { 
+                q: "産業革命後、産業資本家が強く求めた、対外取引に関して国家の管理や統制を排除する方針は何か？", 
+                a: "自由貿易主義",
+                explanation: "産業革命後、国家の管理や統制を排除する方針"
+            },
+                 { 
+                q: "自由貿易主義の実現に向けて、1833年に東インド会社の何の廃止が定められたか？", 
+                a: "中国貿易独占権",
+                explanation: "東インド会社で廃止されたもの"
+            },
+                 { 
+                q: "1812年に制定され、安価な大陸産穀物の流入による国産穀物の値下がりを阻止して地主の利益を守ろうとした法律は何か？", 
+                a: "穀物法",
+                explanation: "国産穀物の値下がりを阻止して地主の利益を守ろうとした法律"
+            },
+                 { 
+                q: "穀物法の廃止に向けた運動の中心として活躍した、2人の政治家・経営者は誰か？", 
+                a: "コブデン、ブライト",
+                explanation: "穀物法廃止に向けた運動の中心人物"
+            },
+                 { 
+                q: "穀物法の廃止運動のため、1839年にコブデン・ブライトらが結成して、マンチェスターに本部が置かれた全国的組織は何か？", 
+                a: "反穀物法同盟",
+                explanation: "マンチェスターに本部"
+            },
+                 { 
+                q: "自由貿易主義の実現に向けて1849年に廃止された、貿易に関する法律は何か？", 
+                a: "航海法",
+                explanation: "自由貿易主義の実現に向けて廃止された貿易に関する法律"
+            },
+                 }
         ];
 
         let currentQuestion = 0;
