--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             },
            { 
                 q: "1825年、十二月党員のロシアの青年貴族士官が、自由主義的改革を要求しておこした反乱は何か？", 
-                a: "デカブリスとの乱",
+                a: "デカブリストの乱",
                 explanation: "ロシアの青年貴族士官が自由主義的改革を要求しておこした"
             },
                  { 
