--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             },
                  { 
                 q: "ルイ14世の弟が祖である、ルイ＝フィリップの家系は何か？", 
-                a: "オルレリアン家",
+                a: "オルレアン家",
                 explanation: "ルイ＝フィリップの家系"
             },
                  { 
