Add historical questions and answers to index.html

--- a/index.html
+++ b/index.html
@@ -501,6 +501,56 @@
                 q: "自由貿易主義の実現に向けて1849年に廃止された、貿易に関する法律は何か？", 
                 a: "航海法",
                 explanation: "自由貿易主義の実現に向けて廃止された貿易に関する法律"
+                          },
+                 { 
+                q: "産業革命期の工場で大量に雇用され、長時間労働や劣悪な勤務環境などを強いられたのは、どのような人々か？", 
+                a: "女性・子供",
+                explanation: ""
+            },
+                  { 
+                q: "生産手段の公有(国有)化によって、社会全体の経済的平等を実現しようとする思想は何か？", 
+                a: "社会主義",
+                explanation: "社会主義(思想)"
+            },
+                  { 
+                q: "ニューラナークの紡績工場などを経営し、労働者の福祉向上につとめたイギリスの初期社会主義者は誰か？", 
+                a: "オーウェン",
+                explanation: "イギリスの初期社会主義者"
+            },
+                  { 
+                q: "賃金労働者が、労働条件や生活の維持・向上のために結成する組織は何か？", 
+                a: "労働組合",
+                explanation: "賃金労働者が結成した組織"
+            },
+                  { 
+                q: "オーウェンらの指導で発展した、労働者らが生活の向上を図るために結成し、経済活動を共同で行う相互扶助組織は何か？", 
+                a: "協同組合",
+                explanation: "労働者らが共同で行う扶助組織"
+            },
+                  { 
+                q: "オーウェンの提言も反映された、数次にわたって出された労働者保護のための法をなんと総称するか？", 
+                a: "工場法",
+                explanation: "労働者保護のための法"
+            },
+                  { 
+                q: "人の能力が自由に発揮できる産業社会の実現を求めた、フランスの初期社会主義者は誰か？", 
+                a: "サン＝シモン",
+                explanation: "人の能力が自由に発揮できる産業社会の実現：フランスの初期社会主義者"
+            },
+                  { 
+                q: "協同組合的理想社会の実現のための団体設立を主張した、フランスの初期社会主義者は誰か？", 
+                a: "フーリエ",
+                explanation: "協同組合的理想社会の実現のための団体設立を主張：フランスの初期社会主義者"
+            },
+                  { 
+                q: ""二月革命の後、労働者を代表する形で臨時政府に入閣した社会主義者は誰か？", 
+                a: "ルイ＝ブラン",
+                explanation: "二月革命後、臨時政府に入閣"
+            },
+                  { 
+                q: "私有財産を否定し、さらに無政府主義の思想を広めたフランスの社会主義者は誰か？", 
+                a: "プルードン",
+                explanation: "無政府主義の思想を広めた"
             }
                  
         ];
