Fix formatting issues in question objects

--- a/index.html
+++ b/index.html
@@ -339,33 +339,33 @@
                 a: "保守主義",
                 explanation: "現行に批判や改革を否定する考え方、運動"
             },
-         　　{ 
-                q: "1815年、ドイツの自由と統一を求めて結成された、大学生の組合（ドイツ学生同盟）は何と呼ばれるか？", 
+                 {
+                    q: "1815年、ドイツの自由と統一を求めて結成された、大学生の組合（ドイツ学生同盟）は何と呼ばれるか？", 
                 a: "ブルシェンシャフト",
                 explanation: "ドイツの自由と統一を求めた大学生の組合"
             },
-            { 
+                 { 
                 q: "19世紀初め、イタリアの独立・統一や自由主義改革を目的に、南イタリアで結成された秘密結社は何か？", 
                 a: "カルボナリ",
                 explanation: "イタリアの独立・統一や自由主義改革を目的に"
             },
-            { 
+                 { 
                 q: "1812年のカディス憲法を復活させたが、1823年にフランス軍の干渉で立憲革命が挫折した国はどこか？", 
                 a: "スペイン",
                 explanation: "1812年フランス軍の干渉で立憲革命が挫折した国"   
             },
-           { 
-                q: "1825年、十二月党員のロシアの青年貴族士官が、自由主義的改革を要求しておこした反乱は何か？", 
+                 {
+                    q: "1825年、十二月党員のロシアの青年貴族士官が、自由主義的改革を要求しておこした反乱は何か？", 
                 a: "デカブリストの乱",
                 explanation: "ロシアの青年貴族士官が自由主義的改革を要求しておこした"
             },
-                 { 
-                q: "1821〜29年、バルカン地域でオスマン帝国からの独立を求めて戦われた戦争は何か？", 
+                 {
+                          q: "1821〜29年、バルカン地域でオスマン帝国からの独立を求めて戦われた戦争は何か？", 
                 a: "ギリシア独立戦争",
                 explanation: "オスマン帝国からの独立を求めた戦争"
             },
-                 { 
-                q: "1829年、ギリシア独立を支援したロシアと、オスマン帝国とのあいだで結ばれた講和条約は何か？", 
+                 {
+                          q: "1829年、ギリシア独立を支援したロシアと、オスマン帝国とのあいだで結ばれた講和条約は何か？", 
                 a: "アドリアノーブル条約",
                 explanation: "ギリシア独立を支援したロシアとオスマン帝国との間で結ばれた"
             },
@@ -543,7 +543,7 @@
                 explanation: "協同組合的理想社会の実現のための団体設立を主張：フランスの初期社会主義者"
             },
                   { 
-                q: ""二月革命の後、労働者を代表する形で臨時政府に入閣した社会主義者は誰か？", 
+                q: "二月革命の後、労働者を代表する形で臨時政府に入閣した社会主義者は誰か？", 
                 a: "ルイ＝ブラン",
                 explanation: "二月革命後、臨時政府に入閣"
             },
