Add multiple historical questions and answers

--- a/index.html
+++ b/index.html
@@ -551,8 +551,186 @@
                 q: "私有財産を否定し、さらに無政府主義の思想を広めたフランスの社会主義者は誰か？", 
                 a: "プルードン",
                 explanation: "無政府主義の思想を広めた"
+                           { 
+                q: "ドイツ社会民主党で19世紀末から出てきた、議会を重視して社会主義の実現を目指す考え方は、批判的な意味を込めてなんと呼ばれたか？", 
+                a: "修正主義",
+                explanation: "議会を重視して社会主義の実現をめざる考え方"
+            },
+            { 
+                q: "ドイツ社会民主党において、修正主義の考えを唱えた理論的指導者は誰か？", 
+                a: "ベルンシュタイン",
+                explanation: "修正主義を唱えた理論的指導者"
+            },
+            { 
+                q: "19世紀後半〜20世紀初めにロシアで行われた、ユダヤ人に対する集団的な略奪や虐殺をなんと呼ぶか？", 
+                a: "ポグロム",
+                explanation: "ロシアで行われたユダヤ人に対する略奪や虐殺"
+            },
+            { 
+                q: "ウィッテが建設を推進した、ロシア内の東西を結んだ鉄道は何か？", 
+                a: "シベリア鉄道",
+                explanation: "ウィッテが建設、ロシア内の東西を結んだ鉄道"
+            },
+            { 
+                q: "19世紀末に創立宣言が出され、1903年に結成されたが、その直後に分裂したロシアのマルクス主義政党は何か？", 
+                a: "ロシア社会民主労働党",
+                explanation: "1903年結成、直後に分裂したロシアのマルクス主義政党"
+            },
+            { 
+                q: "ロシア社会民主労働党の分裂の際、少数の革命家の武装蜂起による革命を主張した一派の呼び名は何か？", 
+                a: "ボリシェヴィキ",
+                explanation: "ロシア社会民主労働党の分裂の際、革命家の武装蜂起による革命を主張"
+            },
+            { 
+                q: "ボリシェヴィキの中心的指導者は誰か？", 
+                a: "レーニン",
+                explanation: "ボリシェヴィキの中心的指導者"
+            },
+            { 
+                q: "ロシア社会民主労働党の分裂の際、幅広い大衆に基盤を置き、漸進的革命を主張した一派の呼び名は何か？", 
+                a: "メンシェヴィキ",
+                explanation: "ロシア社会民主労働党の分裂の際、大衆に基盤をおき漸進的革命を主張"
+            },
+            { 
+                q: "メンシェヴィキの指導者の一人で、ロシアのマルクス主義の父と称された人物は誰か？", 
+                a: "プレハーノフ",
+                explanation: "マルクス主義の父と称された"
+            },
+            { 
+                q: "1901年に結成された、ナロードニキの流れをくみ、通称エスエルと呼ばれた社会主義政党は何か？", 
+                a: "社会革命党",
+                explanation: "社会革命党(社会主義者・革命家党)"
+            },
+            { 
+                q: "日露戦争中の1905年1月、首都ペテルブルクで発生した、多数の死傷者を出した事件は何か？", 
+                a: "血の日曜日事件",
+                explanation: "1905年1月、ペテルブルクで発生した事件"
+            },
+                 { 
+                q: "血の日曜日事件の際、請願デモを指導した聖職者は誰か？", 
+                a: "ガポン",
+                explanation: "血の日曜日事件の際、請願デモを指導"
+                 },
+                  { 
+                q: "血の日曜日事件が発端となって始まった革命運動はなんと呼ばれるか？", 
+                a: "1905年革命（第１次ロシア革命）",
+                explanation: "血の日曜日事件が発端で始まった革命運動"
+            },
+            { 
+                q: "1905年革命の際に発足した、ロシア語で「会議（評議会）」を意味する組織は何か？", 
+                a: "ソヴィエト",
+                explanation: "1905年革命で発足、ロシア語で「会議」を意味する組織"
+            },
+            { 
+                q: "1905年革命の際の皇帝で、1917年のロシア革命で退位した、ロマノフ朝最後の皇帝は誰か？", 
+                a: "ニコライ2世",
+                explanation: "ロシア革命で退位、ロマノフ朝最後の皇帝"
+            },
+            { 
+                q: "1905年10月に皇帝が発布した勅令は何と呼ばれるか？", 
+                a: "十月宣言",
+                explanation: "1905年10月皇帝が発布した勅令"
+            },
+            { 
+                q: "十月宣言を起草し、首相に登用された人物は誰か？", 
+                a: "ウィッテ",
+                explanation: "十月宣言を起草、首相に登用"
+            },
+            { 
+                q: "十月宣言を発布後に設立された、ブルジョワ政党は何か？", 
+                a: "立憲民主党",
+                explanation: "ブルジョワ政党"
+            },
+            { 
+                q: "1905年革命後に開設された国会を何と呼ぶか？", 
+                a: "ドゥーマ",
+                explanation: "国会"
+            },
+            { 
+                q: "1906年に首相となり、反動政治を強行する一方、ミール解体などの土地改革を進めた政治家は誰か？", 
+                a: "ストルイピン",
+                explanation: "反動政治を強行、土地改革を進めた政治家"
+            },
+            { 
+                q: "1882年に制定されたアメリカ史上最初の移民規制法は、西海岸の中国人労働者（クーリー）の移民が禁止されたところから別名で何と呼ばれるか？", 
+                a: "中国人移民禁止法",
+                explanation: "アメリカ史上最初の移民規制法、中国人労働者の移民が禁止"
+            },
+            { 
+                q: "1882年にスタンダード石油トラストを形成し、石油業界の支配者となったアメリカの実業家は誰か？", 
+                a: "ロックフェラー",
+                explanation: "ロックフェラー（１世）"
+            },
+            { 
+                q: "巨大企業による市場の支配を禁止するアメリカの法は、何と称されるか？", 
+                a: "反トラスト法",
+                explanation: "巨大企業による市場の支配を禁止"
+            },
+                 {
+                    q: "1898年、キューバ独立運動支援とメイン号爆沈事件を口実にアメリカが開始した戦争は何か？", 
+                a: "アメリカ＝スペイン戦争",
+                explanation: "アメリカ＝スペイン（米西）戦争"
+            },
+                 { 
+                q: "アメリカ＝スペイン戦争を開始して、帝国主義政策を推進した共和党の大統領は誰か？", 
+                a: "マッキンリー",
+                explanation: "帝国主義政策を推進した共和党の大統領"
+            },
+                 { 
+                q: "アメリカ＝スペイン戦争ののち、アメリカに併合されたカリブ海の島はどこか？", 
+                a: "プエルトリコ",
+                explanation: "アメリカ＝スペイン戦争後、アメリカに併合された島"   
+            },
+                 {
+                    q: "アメリカ＝スペイン戦争ののち、アメリカが事実上保護国化したキューバの憲法の付属項目を何と呼ぶか？", 
+                a: "プラット条項",
+                explanation: "アメリカが保護国化したキューバの憲法の付属項目"
+            },
+                 {
+                          q: "1899〜1900年に国務長官ジョン＝ヘイが中国進出のため列強に提唱した宣言を何と総称するか？", 
+                a: "門戸開放宣言",
+                explanation: "ジョン＝ヘイが中国進出のために列強に提唱した宣言"
+            },
+                 {
+                          q: "マッキンリーの暗殺により、1901年に大統領に昇格した共和党の政治家は誰か？", 
+                a: "セオドア＝ローズヴェルト",
+                explanation: "マッキンリー暗殺後、大統領に昇格した共和党の政治家"
+            },
+                 { 
+                q: "セオドア＝ローズヴェルトが内政面で掲げた、独占の規制と労働者の保護を内容とする社会改革政策など、20世紀初めのアメリカでおこった革新的な思想・運動は何と呼ばれるか？", 
+                a: "革新主義",
+                explanation: "セオドア＝ローズヴェルトが掲げた社会革新政策など20世紀初めのアメリカでおこった革新的思想・運動"
+            },
+                 { 
+                q: "軍事力を背景としたセオドア＝ローズヴェルトのカリブ海政策は何と呼ばれるか？", 
+                a: "棍棒外交",
+                explanation: "セオドア＝ローズヴェルトのカリブ海政策"
+            },
+                 { 
+                q: "独立後のパナマに、アメリカは何を建設したか？", 
+                a: "パナマ運河",
+                explanation: "アメリカが建設"
+            },
+                 { 
+                q: "「ドル外交」と呼ばれるカリブ海政策をとったアメリカ大統領は誰か？", 
+                a: "タフト",
+                explanation: "「ドル外交」と呼ばれるカリブ海政策"
+            },
+                 { 
+                q: "選挙の際に「新しい自由」をスローガンに掲げ、1913年に大統領に就任した民主党政治家は誰か？", 
+                a: "ウィルソン",
+                explanation: "スローガン「新しい自由」、民主党政治家"
+            },
+                 { 
+                q: "ウィルソンがおこなった、アメリカ民主主義の道徳的優位を掲げたラテンアメリカ外交は何と呼ばれるか？", 
+                a: "宣教師外交",
+                explanation: "ウィルソンがおこなったラテンアメリカ外交"
+            },
+                 { 
+                q: "1889年にパリで欧米の社会主義政党や労働者組織の代表によって結成された、国際組織は何か？", 
+                a: "第２インターナショナル",
+                explanation: "1889年パリで結成された国際組織"
             }
-                 
         ];
 
         let currentQuestion = 0;
