Fix typo in answer regarding Russian principles

--- a/Q&A/russia2.html
+++ b/Q&A/russia2.html
@@ -421,7 +421,7 @@
             },
                  { 
                 q: "1917年11月、ロシアの新政府が「平和に関する布告」で示した原則的考えは何か？", 
-                a: "無併合・無償禁・民族自決",
+                a: "無併合・無償金・民族自決",
                 explanation: "「平和に関する布告」で示した原則的考え"
             },
                  { 
