--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             },
                  {
                           q: "1829年、ギリシア独立を支援したロシアと、オスマン帝国とのあいだで結ばれた講和条約は何か？", 
-                a: "アドリアノーブル条約",
+                a: "アドリアノープル条約",
                 explanation: "ギリシア独立を支援したロシアとオスマン帝国との間で結ばれた"
             },
                  { 
