Update explanation for election reform question

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                  { 
                 q: "1832年にホイッグ内閣のもとで実施され、産業資本家の参政権獲得が実現した自由主義的改革は何か？", 
                 a: "第1回選挙法改正",
-                explanation: "ホイッグ内閣で実施、自由主義的改革"
+                explanation: "グレー内閣(ホイッグ党)で実施、自由主義的改革"
             },
                  { 
                 q: "第１回選挙法改正で廃止された人口の都市集中で有権者が激減したにもかかわらず、地域有力者の支配下に置かれたままの選挙区を何と呼ぶか？", 
