Enhance explanations for historical questions

--- a/Q&A/russia1.html
+++ b/Q&A/russia1.html
@@ -302,7 +302,7 @@
             { 
                 q: "1905年10月に皇帝が発布した勅令は何と呼ばれるか？", 
                 a: "十月宣言",
-                explanation: "1905年10月皇帝が発布した勅令"
+                explanation: "第一次ロシア革命でゼネストが広がり、動揺したツァーリのニコライ2世が交付した宣言。人身の不可侵、思想・言論・集会・結社の自由を認め、国民の選挙で議員を選ぶ国会（ドゥーマ）を開設し、立法権を与えるという内容であった。"
             },
             { 
                 q: "十月宣言を起草し、首相に登用された人物は誰か？", 
@@ -382,7 +382,7 @@
                  { 
                 q: "独立後のパナマに、アメリカは何を建設したか？", 
                 a: "パナマ運河",
-                explanation: "アメリカが建設"
+                explanation: "1881年にフランス人レセップスが建設に着手したが失敗。パナマはアメリカが1903年に強引に独立させた。翌年アメリカが建設に着手。1914年完成。"
             },
                  { 
                 q: "「ドル外交」と呼ばれるカリブ海政策をとったアメリカ大統領は誰か？", 
